Blockly: Add permission to operate workspace

--- a/blockly/config/locales/workspace/ja.yml
+++ b/blockly/config/locales/workspace/ja.yml
@@ -15,6 +15,7 @@ ja:
     errors:
       models:
         workspace:
+          permission_denied: 操作権限がありません
           attributes:
             xml:
               lock_workspace_error: はロックしているため更新できません
